Add wordcloud compatibility
